# TSP-WITH-RIDESHARING-AND-QUOTA

./: .gitignore  PROBLEMA.txt  README.md
codemeta/transgenetic/: CMakeLists.txt  PCVPQ.cpp  PCVPQ.h  endossimbionte.cpp  endossimbionte.h  macros.h  main.cpp  mersennetwister.cpp  mersennetwister.h  plasmideo.cpp  plasmideo.h  plasmideo_recombinado.cpp  plasmideo_recombinado.h  solucao.cpp  solucao.h  transgenetic  transgenetic.cpp  transgenetic.h  transposon.cpp  transposon.h  vetor_transgenetico.cpp  vetor_transgenetico.h  virus.cpp  virus.h
codemeta/transgenetic/instancias/: big.in  small1.in  small2.in  small3.in
codemeta/transgenetic/resultados/: resultados.csv  resultados.ods
heuristic/: CMakeCache.txt  CMakeLists.txt  GRASP.cpp  HEURISTIC.cpp  MATHEURISTIC.cpp  Makefile  cmake_install.cmake  heuristic  heuristic.cpp  run.sh  runsteste.py  testeheuristico.py  testescript.py  testescript10.py  testescript20.py  testescript30.py  testescript40.py  testescript50.py  testescriptAss.py  testescriptAss.py.save
heuristic/agrasp/: resultsAssimetrico.csv
heuristic/agrasp/ftv35-4-25/: ftv35-4-25.csv  ftv35-4-25_1.txt  ftv35-4-25_10.txt  ftv35-4-25_11.txt  ftv35-4-25_12.txt  ftv35-4-25_13.txt  ftv35-4-25_14.txt  ftv35-4-25_15.txt  ftv35-4-25_16.txt  ftv35-4-25_17.txt  ftv35-4-25_18.txt  ftv35-4-25_19.txt  ftv35-4-25_2.txt  ftv35-4-25_20.txt  ftv35-4-25_21.txt  ftv35-4-25_22.txt  ftv35-4-25_23.txt  ftv35-4-25_24.txt  ftv35-4-25_25.txt  ftv35-4-25_26.txt  ftv35-4-25_27.txt  ftv35-4-25_28.txt  ftv35-4-25_29.txt  ftv35-4-25_3.txt  ftv35-4-25_30.txt  ftv35-4-25_4.txt  ftv35-4-25_5.txt  ftv35-4-25_6.txt  ftv35-4-25_7.txt  ftv35-4-25_8.txt  ftv35-4-25_9.txt
heuristic/agrasp/ftv38-4-33/: ftv38-4-33.csv  ftv38-4-33_1.txt  ftv38-4-33_10.txt  ftv38-4-33_11.txt  ftv38-4-33_12.txt  ftv38-4-33_13.txt  ftv38-4-33_14.txt  ftv38-4-33_15.txt  ftv38-4-33_16.txt  ftv38-4-33_17.txt  ftv38-4-33_18.txt  ftv38-4-33_19.txt  ftv38-4-33_2.txt  ftv38-4-33_20.txt  ftv38-4-33_21.txt  ftv38-4-33_22.txt  ftv38-4-33_23.txt  ftv38-4-33_24.txt  ftv38-4-33_25.txt  ftv38-4-33_26.txt  ftv38-4-33_27.txt  ftv38-4-33_28.txt  ftv38-4-33_29.txt  ftv38-4-33_3.txt  ftv38-4-33_30.txt  ftv38-4-33_4.txt  ftv38-4-33_5.txt  ftv38-4-33_6.txt  ftv38-4-33_7.txt  ftv38-4-33_8.txt  ftv38-4-33_9.txt
heuristic/agrasp/ftv44-4-25/: ftv44-4-25.csv  ftv44-4-25_1.txt  ftv44-4-25_10.txt  ftv44-4-25_11.txt  ftv44-4-25_12.txt  ftv44-4-25_13.txt  ftv44-4-25_14.txt  ftv44-4-25_15.txt  ftv44-4-25_16.txt  ftv44-4-25_17.txt  ftv44-4-25_18.txt  ftv44-4-25_19.txt  ftv44-4-25_2.txt  ftv44-4-25_20.txt  ftv44-4-25_21.txt  ftv44-4-25_22.txt  ftv44-4-25_23.txt  ftv44-4-25_24.txt  ftv44-4-25_25.txt  ftv44-4-25_26.txt  (+11 more)
heuristic/grasp/: results10.csv  results20.csv  results30.csv  results40.csv  results50.csv
metaheuristics/: .gitignore  CMakeLists.txt  README.md  a_run_gen_split.py  b_run_gen_scx.py  c_run_gen_scx_based.py  d_run_mem_split.py  e_run_mem_scx.py  f_run_mem_scx_based.py  main.cpp  run.sh  testescript.py
metaheuristics/common/: MersenneTwister.cpp  MersenneTwister.h  Shared.cpp  Shared.h  macros.h
metaheuristics/genetic/: Chromosome.cpp  Chromosome.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h
metaheuristics/model/: Solution.cpp  Solution.h
(+2123 files in other folders)
